--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.example</groupId>
-  <artifactId>near</artifactId>
+  <artifactId>external</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>near</name>
+  <name>external</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
